--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=warehouse
+    volumes:
+      - whdata:/var/lib/postgresql/data
 
 # Zookeeper, single node
   zookeeper:
@@ -108,3 +110,5 @@ services:
       - kafka2
       - zookeeper
       - postgres  
+volumes:
+  whdata:
